#content-wrap fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -149,7 +149,7 @@ pre * {
  
 #content-wrap {
     margin: 2em auto 0;
-    width: inherit;
+    width: auto;
     min-height: 1300px;
     height: 100%;
     position: initial;
